--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "cyclic-dynamodb": "^0.0.27",
     "express": "^4.18.1",
     "helmet": "^5.1.1"
   }
